--- a/proyecto1/plantillas/static/css/estilos.css
+++ b/proyecto1/plantillas/static/css/estilos.css
@@ -1541,6 +1541,55 @@ header{
 	box-shadow: 0 4px 25px -12px #000000;
 }
 
+.login-histo{
+	position: relative;
+	top: 80px;
+}
+
+.login-histo form{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.login-histo form h1{
+	color: blue;
+	text-shadow: 2px 2px 2px black;
+}
+
+.login-histo form input{
+	border-radius: 30px;
+	margin: 5px 0px;
+	height: 25px;
+	width: 160px;
+	text-align: center;
+}
+
+
+.login-histo form input#send-log{
+	width: 100px;
+	height: 30px;
+	color: white;
+	background-color: #FFC000;
+	font-size: 17px;
+}
+
+.enun-hist{
+	top: 80px;
+	position: relative;
+}
+
+.enun-hist h1{
+	font-size: 45px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #0883E3;
+	text-shadow: 2px 2px 5px black;
+	margin: 20px 0px;
+}
+
 .comprar-libro-info{
 	top:  80px;
 	width:100%;
